[tool.poetry]
name = "pytube"
version = "0.15.0"
description = "Python 3 library for downloading YouTube Videos."
authors = ["ramsy0dev <ramsy0dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
bumpversion = "^0.6.0"
twine = "^5.1.0"
black = "^24.4.2"
coveralls = "^4.0.1"
coverage = "^7.5.3"
flake8 = "^7.0.0"
flake8-breakpoint = "^1.1.0"
flake8-broken-line = "^1.0.0"
flake8-bugbear = "^24.4.26"
flake8-builtins = "^2.5.0"
flake8-comprehensions = "^3.14.0"
flake8-eradicate = "^1.5.0"
flake8-executable = "^2.1.3"
flake8-if-expr = "^1.0.4"
flake8-logging-format = "^0.9.0"
flake8-mock = "^0.4"
flake8-mutable = "^1.2.0"
flake8-print = "^5.0.0"
flake8-pytest = "^1.4"
flake8-pytest-style = "^2.0.0"
flake8-quotes = "^3.4.0"
flake8-return = "^1.2.0"
flake8-strict = "^0.2.1"
flake8-string-format = "^0.3.0"
mypy = "^1.10.0"
pep8-naming = "^0.14.1"
pre-commit = "^3.7.1"
pytest = "^8.2.1"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
pytest-profiling = "^1.7.0"
sphinx-rtd-theme = "^2.0.0"
pipenv-to-requirements = "^0.9.0"
typing-extensions = "^4.12.0"

[tool.poetry.plugins."console_scripts"]
pytube = "pytube.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
