[tool.poetry]
name = "pytube"
version = "0.15.0"
description = "Python 3 library for downloading YouTube Videos."
authors = ["ramsy0dev <ramsy0dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
bumpversion = "^0.6.0"
twine = ">=5.1,<7.0"
black = ">=24.4.2,<26.0.0"
mypy = "^1.10.0"
pep8-naming = ">=0.14.1,<0.16.0"
pre-commit = ">=3.7.1,<5.0.0"
pytest = "^8.2.1"
pytest-cov = ">=5,<7"
pytest-mock = "^3.14.0"
pytest-profiling = "^1.7.0"
sphinx-rtd-theme = ">=2,<4"
pipenv-to-requirements = "^0.9.0"
typing-extensions = "^4.12.0"

[tool.poetry.plugins."console_scripts"]
pytube = "pytube.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
